feat: add filter columns to database config
